# SimpleWallet

./: .gitignore  README.md  Read_Lines.txt  ecdsa description.txt  pyproject.toml  requirements.txt  setup.cfg
config/: config.json
src/simplewallet/: __init__.py  __main__.py  main.py  simplewallet.py
src/simplewallet/bitcoin/: address.py  helper.py  privkey.py  protocol.py  pubkey.py  signer.py  verifier.py
src/simplewallet/crypto/: base.py  ecdsa.py  hash160.py  ripemd.py  secp256k1.py  sha256.py
src/simplewallet/dircrawler/: crawler.py  datamodder.py  filemodder.py  instance.py
src/simplewallet/gui/: addressgui.py  instance.py  signergui.py  verifiergui.py
src/simplewallet/utils/: base_encoder.py  bech32.py  commoncmd.py  configloader.py  configparser.py  conversion.py  hexxer.py  type_conv.py
test/: test_features.py  test_main.py  unit_test.py
