[metadata]
name = SimpleWallet
version = 1.0.0
author = ArcticTechnology
author_email = arctic.technology.mail@gmail.com
license = MIT
description = Simple wallet for Bitcoin.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bitcoin, crypto, wallet
url = https://github.com/ArcticTechnology/SimpleWallet
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Education
	Topic :: Software Development
	Topic :: Software Development :: Libraries

[options]
install_requires =
	libsecp256k1_0 >= 0.3.0
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	simplewallet = simplewallet.main:main

[options.data_files]
simplewallet/config = config/config.json